tests/paczka2/big_fuzzy/20497929.err
Error in line 4: lzv6vhcFtt S322 71,7
Error in line 2: 43h A488 31,6
Error in line 15: PnNT A836 1,5
Error in line 16: PnNT A488 79,3
Error in line 27: 43h A972 46,8
Error in line 45: lzv6vhcFtt A836 98,69
Error in line 40: PnNT A488 82,4
Error in line 53: A488 S3~~ 18,0
Error in line 49: xW1mqjtei A488 53,7
Error in line 64: xW1mqjtei A972 22,6
Error in line 69: tCirTLnszV A836 21,4
Error in line 104: tCirTLnszV S322 3,0
Error in line 107: tCirTLnszV A836 68,1
Error in line 111: tCirTLnszV A972 176,63
Error in line 100: lzv6vhcFtt S322 17,4
Error in line 105: PnNT A836 45,1
Error in line 109: tCirTLnszV A972 95,3
Error in line 114: PnNT A488 44,1
Error in line 118: PnNT A972 48,6
Error in line 119: A488 A836 39,5
Error in line 112: lzv6vhcFtt A488 37,4
Error in line 126: lzv6vhcFtt A972 54,4
Error in line 117: RLHIT A488 77,4
Error in line 133: tCirTLnszV A836 97,8
Error in line 127: lzv6vhcFtt A836 73,2
Error in line 149: RLHIT S322 16,7
Error in line 145: A488 S322 144,9
Error in line 143: lzv6vhcFtt S322 36,7
Error in line 161: RLHIT A836 61,9
Error in line 166: PnNT A972 21,5
Error in line 173: PnNT A836 59,6
Error in line 170: RLHIT A972 1,6
Error in line 196: tCirTLnszV A972 5,6
Error in line 194: lzv6vhcFtt A972 98,2
Error in line 204: 43h S322 79,3
Error in line 213: xW1mqjtei A836 24,3
Error in line 201: lzv6vhcFtt A488 69,9
Error in line 221: RLHIT A972 2,4
Error in line 226: RLHIT A836 0,6
Error in line 230: xW1mqjtei A488 99,1
Error in line 234: A488 A488 71,6
Error in line 238: A488 A972 85,0
Error in line 244: 43h A836 47,1
Error in line 246: PnNT A488 63,0
